src/components/zen-space/zen-space.scss
:host {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: baseline;
}

:host([stretch]) {
  width: 100%;
}

:host([vertical]) {
  flex-direction: column;
}

:host(:not([no-wrap])) {
  flex-wrap: wrap;
}

// Padding --------------------------------------

$paddings: (
  'none': 0,
  'xs': 1px,
  'sm': 0.25rem,
  'md': 0.5rem,
  'lg': 1rem,
  'xl': 2rem,
);

@each $key, $value in $paddings {
  :host(.padding-#{$key}) {
    padding: #{$value};
  }
}

@each $key, $value in $paddings {
  :host(.padding-x-#{$key}) {
    padding-left: #{$value};
    padding-right: #{$value};
  }
}

@each $key, $value in $paddings {
  :host(.padding-y-#{$key}) {
    padding-top: #{$value};
    padding-bottom: #{$value};
  }
}

@each $side in [ 'top', 'right', 'bottom', 'left' ] {
  @each $key, $value in $paddings {
    :host(.padding-#{$side}-#{$key}) {
      padding-#{$side}: #{$value};
    }
  }
}

// Row align ------------------------------------

$aligns: (
  'start': 'flex-start',
  'end': 'flex-end',
  'center': 'center',
  'baseline': 'baseline',
  'stretch': 'stretch',
  'space-between': 'space-between',
  'space-around': 'space-around',
  'space-evenly': 'space-evenly',
);

@each $key, $value in $aligns {
  :host(:not([vertical])[vertical-align='#{$key}']) {
    align-items: #{$value};
  }
}

@each $key, $value in $aligns {
  :host(:not([vertical])[horizontal-align='#{$key}']) {
    justify-content: #{$value};
  }
}

// Column align ---------------------------------

@each $key, $value in $aligns {
  :host([vertical-align='#{$key}']) {
    justify-content: #{$value};
  }
}

@each $key, $value in $aligns {
  :host([horizontal-align='#{$key}']) {
    align-items: #{$value};
  }
}

:host([vertical][vertical-align='stretch']) ::slotted(*),
:host(:not([vertical])[horizontal-align='stretch']) ::slotted(*) {
  flex-grow: 1;
}

// Spacing --------------------------------------

$spacings: (
  'none': 0,
  'xs': 1px,
  'sm': 0.25rem,
  'md': 0.5rem,
  'lg': 1rem,
  'xl': 2rem,
);

@each $key, $value in $spacings {
  :host([spacing='#{$key}']) ::slotted(*:not(:first-child)) {
    margin-left: #{$value};
  }
}

@each $key, $value in $spacings {
  :host([spacing='#{$key}'][vertical]) ::slotted(*:not(:first-child)) {
    margin-left: 0;
    margin-top: #{$value};
  }
}

// Slotted --------------------------------------

::slotted(.space-before),
::slotted([space-before]) {
  margin-left: auto !important;
}

::slotted(.space-after),
::slotted([space-after]) {
  margin-right: auto !important;
}

::slotted(.fill),
::slotted([fill]) {
  flex-grow: 1 !important;
}

::slotted(.fill-lg),
::slotted([fill-lg]) {
  flex-grow: 2 !important;
}

::slotted(.fill-xl),
::slotted([fill-xl]) {
  flex-grow: 4 !important;
}

// Form group --------------------------------------

::slotted([variant='label']) {
  margin-bottom: 0.5rem !important;
}

